# UdpProject

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  config.ini  main.cpp  run_client.sh
common/: CMakeLists.txt  logger.h  protocol.h
server/: CMakeLists.txt  config.ini  main.cpp  server.cpp  server.h
